discussion/kv_engine/175331/175331_rev24_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cancel RangeScans that exist for "too long"

A RangeScan cannot 'exist' indefinitely as disk cannot be released by
compaction. This commit adds a task that will 'force' cancel any
RangeScan that has existed for longer than a configuration defined
duration (180 seconds by default). This cancelling occurs irrespective
of the scan state/progress.

A cancellation task is created per vbucket and shares code with the
durability timeout task. The idea is that when a scan is created, the
task will change from sleep(-1) to sleep(180). When the task wakes it
will check the state of the vbucket's scans and force cancel any that
have a 180 second existence. At this point the task may sleep(-1) or
set a sleep time based on the vbucket's scans, e.g. if scans remain
the sleep time is set to be the duration until the next scan would
of exceeded the 180 seconds.

Change-Id: I409b00ab08772fa36af8f2fad83c0b083fe26165

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-16 13:01:51.000000000
Message: 
Uploaded patch set 24.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-16 13:29:08.000000000
Message: 
Patch Set 24: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19501/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1: error: expected unqualified-id [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1445:1: error: use of undeclared identifier "RangeScanTest_dropped_collection_for_continue_Test" [clang-diagnostic-error]
TEST_P(RangeScanTest, dropped_collection_for_continue) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest-param-test.h:434:7: note: expanded from macro "TEST_P"
  int GTEST_TEST_CLASS_NAME_(test_suite_name,                                  \
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/internal/gtest-internal.h:1524:3: note: expanded from macro "GTEST_TEST_CLASS_NAME_"
  test_suite_name##_##test_name##_Test
  ^
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1536:29: error: use of undeclared identifier "uuid" [clang-diagnostic-error]
                      vbid, uuid, *cookie, 0, std::chrono::milliseconds(0), 0));
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19501/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: expected unqualified-id [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19501/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48400/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1442): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48400/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9191/ : FAILURE

Compile error at [2022-08-16T13:05:39.152Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9288/ : FAILURE

Compile error at [2022-08-16T13:14:32.758Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9288/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21438/ : FAILURE

Compile error at [2022-08-16T13:11:47.971Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22513/ : FAILURE

Compile error at [2022-08-16T13:11:02.104Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22513/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21791/ : FAILURE

Compile error at [2022-08-16T13:06:22.456Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21791/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29816/ : FAILURE

Compile error at [2022-08-16T13:11:52.865Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29816/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20696/ : FAILURE

Compile error at [2022-08-16T13:28:43.298Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1442:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20696/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40667/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40667/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40667/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18712/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
